--- a/webapp/views/lrslt.ejs
+++ b/webapp/views/lrslt.ejs
@@ -1,11 +1,11 @@
 <html>
 <head><title>Knowledge Hub </title>
-<link rel="stylesheet" href="'/stylesheets/design.css'">
+<link rel="stylesheet" href="/stylesheets/design.css">
 </head>
 <body>
     <h3><strong>NOBODY PROVIDES IT BETTER BUT</strong></h3>
 <div class="logo">
-<img src="./imgs/logo2.PNG" alt="logo2.PNG" height="300" width="400">
+<img src="/images/logo2.PNG" alt="logo2.PNG" height="300" width="400">
 </div>
 <div class="slider"></div>
 <ul class="nav" style=" margin-right: 85%; margin-top: 20px;" >
@@ -21,9 +21,10 @@
    <li class="new">
       <a class="nav disable" href="a" tabindex="-1" aria-disabled="true"><strong>PROFILE</strong></a>
    </li>
-   <% records.forEach(function(row){ %>
-   <p>Hye , whose email is <%= records.email %> 
-   </p>
-   <% }) %>
-   </body>
+</ul>
+   <p></p>
+   <p></p>
+   <p></p>
+   <h2>Hye <%= records.name %> , its been a wonderful  help from yours to get till here and now that you are visiting my initial code along the 1st people , I hope you might give me appropriate suggestions to improvise my work. It would be a great hrlp if you provide me with suitable suggestions for this initial just started website , the repo for the following project will be mailed to your email <%= records.email %> so do kindly visit and contribute to make it better , thanking you!!!</h2>
+  </body>
    </html>
